@@ -1858,6 +1858,7 @@ public class LambdaJ {
         sReadallLines("read-all-lines", Features.HAVE_IO, 1, 2)        { @Override Object apply(LambdaJ intp, ConsCell args) { return readAllLines(args); } },
         sReadString("read-string", Features.HAVE_IO, 1, 2)             { @Override Object apply(LambdaJ intp, ConsCell args) { return readString(args); } },
         sWriteLines("write-lines", Features.HAVE_IO, 2, 4)             { @Override Object apply(LambdaJ intp, ConsCell args) { return writeLines(args); } },
+        sWriteString("write-string", Features.HAVE_IO, 2, 4)           { @Override Object apply(LambdaJ intp, ConsCell args) { return writeString(args); } },
         sWrite("write", Features.HAVE_IO, 1, 2)                        { @Override Object apply(LambdaJ intp, ConsCell args) { return write(intp.getLispPrinter(), car(args), cdr(args) == null || cadr(args) != null); } },
         sWriteln("writeln", Features.HAVE_IO, 0, 2)                    { @Override Object apply(LambdaJ intp, ConsCell args) { return writeln(intp.getLispPrinter(), args, cdr(args) == null || cadr(args) != null); } },
         sLnwrite("lnwrite", Features.HAVE_IO, 0, 2)                    { @Override Object apply(LambdaJ intp, ConsCell args) { return lnwrite(intp.getLispPrinter(), args, cdr(args) == null || cadr(args) != null); } },
@@ -4689,7 +4690,7 @@ public class LambdaJ {
                 final String line = reader.readLine();
                 if (line == null)
                     break;
-                ret.append(line).append(System.lineSeparator());
+                ret.append(line).append('\n');
             }
             return ret;
         }
@@ -4735,7 +4736,42 @@ public class LambdaJ {
             throw wrap(e);
         }
     }
-    
+
+    /** (write-string filenamestr string [appendp [charset]]) -> nil */
+    static Object writeString(ConsCell args) {
+        final String fileName = requireString("write-lines", car(args));
+        args = (ConsCell)cdr(args);
+
+        final CharSequence charSeq = requireCharsequence("write-lines", car(args));
+        args = (ConsCell)cdr(args);
+
+        boolean appendp = false;
+        String cs = null;
+        if (args != null) {
+            if (car(args) != null) appendp = true;
+            args = (ConsCell)cdr(args);
+            if (args != null) cs = requireString("write-lines", car(args));
+        }
+        final Path p = Paths.get(fileName);
+        try (final BufferedWriter w = Files.newBufferedWriter(p, cs == null ? StandardCharsets.UTF_8 : Charset.forName(cs),
+                                                              appendp
+                                                              ? new OpenOption[]{StandardOpenOption.APPEND, StandardOpenOption.CREATE}
+                                                              : new OpenOption[]{StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE})) {
+            final String eol = System.lineSeparator();
+            if ("\n".equals(eol))
+                w.append(charSeq);
+            else for (int i = 0; i < charSeq.length(); i++) {
+                final char c = charSeq.charAt(i);
+                if (c == '\n') w.append(eol);
+                else w.append(c);
+            }
+            return null;
+        }
+        catch (Exception e) {
+            throw wrap(e);
+        }
+    }
+
     static Object write(ObjectWriter lispPrinter, Object arg, boolean printEscape) {
         if (lispPrinter == null) throw new LambdaJError(true, "%s: lispStdout is nil", "write");
         lispPrinter.printObj(arg, printEscape);
@@ -7029,6 +7065,7 @@ public class LambdaJ {
         public final Object readAllLines(Object... args) { varargs1_2("read-all-lines",      args.length); return LambdaJ.readAllLines(arraySlice(args)); }
         public final Object readString  (Object... args) { varargs1_2("read-string",         args.length); return LambdaJ.readString(arraySlice(args)); }
         public final Object writeLines  (Object... args) { varargsMinMax("write-lines",      args.length, 2, 4); return LambdaJ.writeLines(arraySlice(args)); }
+        public final Object writeString (Object... args) { varargsMinMax("write-string",     args.length, 2, 4); return LambdaJ.writeString(arraySlice(args)); }
         public final Object _write      (Object... args) { varargs1_2("write",               args.length); return LambdaJ.write(lispPrinter, args[0], args.length < 2 || args[1] != null); }
         public final Object _writeln    (Object... args) { varargs0_2("writeln",             args.length); return LambdaJ.writeln(lispPrinter, arraySlice(args), args.length < 2 || args[1] != null); }
         public final Object _lnwrite    (Object... args) { varargs0_2("lnwrite",             args.length); return LambdaJ.lnwrite(lispPrinter, arraySlice(args), args.length < 2 || args[1] != null); }
@@ -7722,6 +7759,7 @@ public class LambdaJ {
             case "read-all-lines": return (CompilerPrimitive)this::readAllLines;
             case "read-string": return (CompilerPrimitive)this::readString;
             case "write-lines": return (CompilerPrimitive)this::writeLines;
+            case "write-string": return (CompilerPrimitive)this::writeString;
             case "write": return (CompilerPrimitive)this::_write;
             case "writeln": return (CompilerPrimitive)this::_writeln;
             case "lnwrite": return (CompilerPrimitive)this::_lnwrite;
@@ -7925,7 +7963,7 @@ public class LambdaJ {
         {"=", "numbereq"}, {"<=", "le"}, {"<", "lt"}, {">=", "ge"}, {">", "gt"}, { "/=", "ne" },
         {"1+", "inc"}, {"1-", "dec"},
         {"read-from-string", "readFromStr"}, {"read-all-lines", "readAllLines"}, {"read-string", "readString"},
-        {"write-lines", "writeLines"}, {"format", "format"}, {"format-locale", "formatLocale" }, {"char-code", "charInt"}, {"code-char", "intChar"},
+        {"write-lines", "writeLines"}, {"write-string", "writeString"}, {"format", "format"}, {"format-locale", "formatLocale" }, {"char-code", "charInt"}, {"code-char", "intChar"},
         {"string=", "stringeq"}, {"string->list", "stringToList"}, {"list->string", "listToString"},
         {"adjustable-array-p", "adjustableArrayP"}, {"vector-add", "vectorAdd"},
         {"vector->list", "vectorToList"}, {"list->vector", "listToVector"}, {"simple-vector->list", "simpleVectorToList"}, {"list->simple-vector", "listToSimpleVector"},
